# TOPIK-Simulator-CLI

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-tts.txt  setup-tts.ps1  topik.cmd  topik.ps1
.claude/agents/: topik-test-author.md
content/: korea_facts.json
content/compose/: ability_obligation.json  connectors.json  description_comparison.json  essentials.json  expressions.json  expressions_advanced.json  particles.json  requests_suggestions.json  tense_negation.json  time_experience.json
content/courses/: topik-i-authentic-mock-01.json  topik-i-authentic-mock-02.json  topik-i-authentic-mock-03.json  topik-i-authentic-mock-04.json  topik-i-mini-pack.json
content/facts/: etiquette.json  film.json  food.json  geography.json  history.json  holidays.json  language.json  literature.json  music.json  politics.json  pop_culture.json  science.json  (+2 more)
context/: SESSION_STATE.md  content_authoring.md  software_building.md
docs/: ARCHITECTURE.md  AUDIO_DESIGN.md  CLI_CONTRACT.md  CONTENT_CONTRACT.md  DATA_PIPELINE.md  FRAMEWORK.md  RELEASE_1.0.md  ROADMAP.md  TTS_SETUP.md  USER_GUIDE.md
examples/: topik.config.example.json
tests/: test_audio_cache.py  test_compose.py  test_config.py  test_content_and_grading.py  test_courses.py  test_dictation.py  test_doctor.py  test_essay.py  test_facts.py  test_grammar.py  test_hangul.py  test_numbers.py  test_pack_management.py  test_question_types.py  test_recall.py  test_report.py  test_security.py  test_shell.py  test_srs.py  test_stats.py  test_timing.py  test_tts.py  test_version.py  test_workspace.py
tools/: check_tts_setup.py  supertonic_synth.py
(+50 files in other folders)
